--- a/src/css/main.css
+++ b/src/css/main.css
@@ -85,9 +85,9 @@ Variables
   --primary-2: #c5dfeb;
   --primary-3: #abd5e7;
   --primary-4: #91c9e1;
-  --primary-5: #7fc2de;
-  --primary-6: #65b2d3;
-  --primary-7: #50a9d0;
+  --primary-5:  rgba(176, 73, 111, 0.59);
+  --primary-6:  rgba(176, 73, 111, 0.59);
+  --primary-7: #e86e1d;
   --primary-8: #2c89b1;
   --primary-9: #267597;
   --primary-10: #215d76;
